Thu Nov 29 11:43:14 CET 2007 Daniel Veillard <daniel@veillard.com>

	* configure.in: avoid a problem in configure if an old gcrypt
	  version is installed, patch from Brent Cowgill, fixes #500390

Tue Nov 13 13:08:08 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/common.c, libexslt/dynamic.c: After discussion on
	  Bugzilla with Peter Pawlowski, added same code for preventing
	  deletion of function result during garbage collection (see
	  bug #495995).
	  
Mon Nov 12 13:53:58 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: Added code to mark the results of
	  str:tokenize and str:split as "function result" to avoid
	  garbage-collecting them during global variable initialisation.
	  Should fix bug #495995.

Wed Oct 24 17:41:08 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* python/libxslt.c: changed iterator argument for Py_Dict_Next
	  from int to ssize_t (seems Python docs are incorrect) to fix
	  x86_64 bug #489854.

Wed Oct 10 16:33:09 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c tests/exslt/date/datetime.1.out
	  tests/exslt/date/date.1.out tests/exslt/date/date.1.xml:
	  applied patch from Maurice van der Pot to fix EXSLT
	  week-in-year extenson which was not conforming to the definition.
	  This also changes the output of the tests a bit. Should fix #452876

Thu Aug 30 08:18:08 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* python/libxslt.c: applied patch from Daniel Gryniewicz to
	  fix a segfault caused by a parameter array not being preset
	  to zero.

Thu Aug 23 17:18:03 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: preparing release of 1.1.22

Thu Aug 23 15:39:18 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: applied patch from Rob Richards to fix a 
	  stylesheet compilation error handling problem #382570

Thu Aug 23 15:22:55 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: applied patch from Roland Schwarz and Rob